--- a/Ordermanager/ConsoleView/ConsoleView.csproj
+++ b/Ordermanager/ConsoleView/ConsoleView.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ordermanager\Ordermanager_Logic.csproj" />
+    <ProjectReference Include="..\Ordermanager_DAL\Ordermanager_DAL.csproj" />
   </ItemGroup>
 
 </Project>
