--- a/Ordermanager/View/View.csproj
+++ b/Ordermanager/View/View.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Ordermanager\Ordermanager_Logic.csproj" />
     <ProjectReference Include="..\Ordermanager_DAL\Ordermanager_DAL.csproj" />
   </ItemGroup>
