--- a/Ordermanager/View/appsettings.json
+++ b/Ordermanager/View/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DafaultDB": "..."
+    "DafaultDB": "Server=127.0.0.1;Database=ordermanager;Uid=root;Pwd=;"
   }
 }
